--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ requests==2.31.0
 secureme==0.0.4
 search_engine_parser==0.6.8
 speedtest-cli==2.1.3
+SibylSystem
 sqlalchemy==2.0.23
 telegraph==2.2.0
 telethon==1.33.1
@@ -57,3 +58,56 @@ youtube_search_python
 pyshorteners
 faker
 pyfiglet
+pendulum
+flag
+envparse
+flask==2.1.1
+werkzeug==2.0.3
+gtts
+pornhub_api
+tswift
+PyYAML>=5.3.1
+redis
+html2text
+pythonping
+html_telegraph_poster
+pytube
+glitch_this
+instantmusic
+pytz
+spamwatch
+NumPy
+opencv-python-headless
+coffeehouse
+#Memes
+selenium
+zalgo_text 
+cowpy 
+fontTools
+nltk
+emoji
+
+#profanity (Credits to Julia)
+better_profanity
+textblob 
+nudepy
+
+#ImageEditor
+glitch_this
+NumPy
+opencv-python-headless
+Pillow
+
+#Bassboost
+pydub
+
+#Lel
+cloudmersive_virus_api_client==3.0.1
+chromedriver==2.24.1
+coloredlogs
+loguru
+babel
+captcha
+async-timeout
+
+
