--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -30,6 +30,6 @@ jobs:
           commit_message: 'Auto Fixes' 
           commit_options: '--no-verify'
           repository: .
-          commit_user_name: Divyanshu Rana
-          commit_user_email: dkrana41118@gmail.com
-          commit_author: Divyanshu Rana <dkrana41118l@gmail.com>
+          commit_user_name: Noob-savvy
+          commit_user_email: saadhmusic@gmail.com
+          commit_author: Divyanshu Rana <saadhmusic@gmail.com>
